[package]
name = "prost-convert-derive"
version = "0.3.0"
edition = "2021"
description = "Proc macro used in prost-convert."
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0.50"

[dev-dependencies]
trybuild = { version = "1.0.77", features = ["diff"] }
prost-convert = { path = "../prost-convert" }
uuid = { version = "1.3.0", features = ["v4"] }
